--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -2556,107 +2556,107 @@ stories:
   domain: http://www.louisville.com/voice.html
   link: https://www.louisville.com/2nd-and-Ali/ep-4-we-love-daily-grind
 images:
-- name: power-lines-power-lines-empty-space-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-light-dali.jpg
-- name: old-barn-old-barn-1500-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purple-storm.jpg
-- name: aws-s3-treeinhills-yellowtree-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-treeinhills-yellowtree-still-1200.jpg
-- name: gypsymosaic-gypsy-eyes-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-nazi-poster.jpg
-- name: gears-4882162452-fa3126b38d-b-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-hot-spicy.jpg
-- name: old-house-oldhouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-sand-paper.jpg
-- name: legal-statue-legalstatue-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crunch-paper.jpg
-- name: flower-barbed-wire-flower-barbed-wire-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-atari-missle.jpg
-- name: legal-statue-legalstatue-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dark-soul.jpg
-- name: status-berlin-status-berlin-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-green-zuma.jpg
-- name: aws-s3-stories-redes-fast-flux-623x425-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-redes-fast-flux-623x425-blue-electricity.jpg
-- name: downtown-los-angeles-downtown-la-really-hot.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-really-hot.JPG
-- name: san-francisco-street-view-san-francisco-street-view-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-matrix.jpg
-- name: liberty-back-statue-liberty-back-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-yellow-paper.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-satan-red.jpg
-- name: downtown-trucksilo-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-crabapple.jpg
-- name: school-clouds-church-clouds-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-hot-spicy.jpg
-- name: liberty-back-statue-liberty-back-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-matrix.jpg
-- name: lincoln-memorial-lincolnmemorial-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-cinnamon-rolls.jpg
-- name: store-on-corner-oldcabin-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-pablo-blue.jpg
-- name: stories-new-68-113-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-113-800-500-0-max-0--1--1.jpg
-- name: hollywood-building-hollywood-building-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-granite.jpg
-- name: rockingchair-rockingchair-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-graham-sutherland.jpg
-- name: server-cloud-server-racks-clouds-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-bright-sand.jpg
-- name: border-crossing-bordercrossing-kandinsky-bv.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kandinsky-bv.png
-- name: supreme-court-supremecourt-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-yellow-paper.jpg
-- name: ellis-island-ellis-island-room-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-spagetti-accident.jpg
-- name: beach-rocks-beach-rocks-currents-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-constitution.jpg
-- name: window-window-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-gan-vogh.jpg
-- name: liberty-back-statue-liberty-back-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-purp-paper.jpg
-- name: lincoln-memorial-lincolnmemorial-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-internet-numbers.jpg
-- name: castle-wall-DSC-0067-deep-connections.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-deep-connections.JPG
-- name: oldhousecars-house-old-cars-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-monet-one.jpg
-- name: gears-4882162452-fa3126b38d-b-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-internet-numbers.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-umberto-bocc.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-cinnamon-rolls.jpg
-- name: containership-containership-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-granite.jpg
-- name: dc-statue-dcstatue-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-spagetti-accident.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
-- name: old-gas-pumps-oldgaspumps-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-marcel-duchamp.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-really-hot.jpg
-- name: wind-mills-windmills-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-deep-connections.jpg
-- name: server-cloud-server-racks-clouds-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-neo-instinct.jpg
-- name: berlinwall-DSC-0084-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crafty-painting.jpg
-- name: trucksilo-trucksilo-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-emily-carr.jpg
-- name: liberty-back-statue-liberty-back-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colorful-dream.jpg
-- name: two-sattelite-dishes-norman-rockwell-ruby-bridges.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-norman-rockwell-ruby-bridges.jpg
-- name: aws-s3-square-schoolhouse-dark-dali-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-schoolhouse-dark-dali-square.jpg
-- name: power-lines-power-lines-empty-space-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-alien-goggles.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
+- name: crow_purp_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purp_paper.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
+- name: aws-s3-blossombar-blossombar-still-2560.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-2560.jpg
+- name: oldhouse-oldhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-colored-circuits.jpg
+- name: mistywoods-babyfoot-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dark-dali.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-deep-connections.jpg
+- name: dc-statue-dcstatue-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dark-soul.jpg
+- name: windowmountain-window-mountain-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dark-rain.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
+- name: eduardo-eduardo-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purple-storm.jpg
+- name: abandonedbuildings_satan_red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_satan_red.jpg
+- name: mosaic-face-mosaic-face-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crabapple.jpg
+- name: aws-s3-stories-server-cloud1-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-cloud1-internet-numbers.jpg
+- name: machine-road-machine-road-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-atari-missle.jpg
+- name: power-lines-power-lines-empty-space-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-emily-carr.jpg
+- name: amusement-park-amusement-park-2-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crunch-paper.jpg
+- name: razorwire-DSC-0080-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-clean-view.jpg
+- name: legal-statue-legalstatue-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-alien-goggles.jpg
+- name: adam-smith-adam-smith-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kand-two.jpg
+- name: white-house-lawn-white-house-lawn-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-sunday.jpg
+- name: yuma-bank-yuma-bak-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-constitution.jpg
+- name: rockingchair-rockingchair-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-matrix.jpg
+- name: white-house-whitehouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-post-modern.jpg
+- name: server-cloud-server-racks-door-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-atari-missle.jpg
+- name: bordercrossing-bordercrossing-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-diego-rivera1.jpg
+- name: supreme-court-supremecourt-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-far-away.jpg
+- name: sand-hand-sand-hand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand.jpg
+- name: fence-fence-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-post-modern.jpg
+- name: ellis-island-ellisisland-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dark-soul.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-far-away.jpg
+- name: fence-mexico-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-really-hot.jpg
+- name: abandonedbuildings_clean_view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_clean_view.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-rain.jpg
+- name: capital-battle-capitolbattle-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-kand-two.jpg
+- name: subway-subway.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway.jpg
+- name: oldtrain-oldtrain-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-attack-planes.jpg
+- name: oldtrain-oldtrain-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-sunday.jpg
+- name: server-cloud-server-racks-clouds-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-constitution.jpg
+- name: supreme-court-supremecourt-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-gan-vogh.jpg
+- name: windowmountain-window-mountain-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-clean-view.jpg
+- name: aws-s3-square-C18YCQlUUAQjxRe-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C18YCQlUUAQjxRe-square.jpg
+- name: yosemite-yosemite-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-purple-pond.jpg
+- name: old-barn-old-barn-1500-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-yellow-collage.jpg
+- name: beach-rocks-beach-rocks-currents-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-light-dali.jpg
+- name: server-cloud-server-racks-clouds-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-mucha-mult.jpg
+- name: docks-docks-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-gred-mash.jpg
+- name: old-house-oldhouse-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purple-storm.jpg
+- name: window-window-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-rain.jpg
+- name: nazi-invasion-IMG_8312.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8312.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-purple-storm.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-purple-storm.png
 ---
 Wayne County High School Graduation.&nbsp;Arapahoe Basin Ski Area To Open Terrain Park For Skiing, Riding Saturday And Sunday.&nbsp;Patricia Arquette Nearly 'passed Out' After Oscar Win.&nbsp;Georgia Track And Field Athletes Have Strong Showings At National Summer Events.&nbsp;Find Resources For Social Security Disability Beneficiaries Who Want To Work.&nbsp;Clippers Thunder Trade Basketball.&nbsp;Downtown Bristols First Nationally Branded Hotel Breaks Ground On State Street.&nbsp;Local Students Make Deans List, Graduate From Newberry College.&nbsp;
